--- a/apps/wallet-mobile/translations/messages/src/auth/CreatePinInput/CreatePinInput.json
+++ b/apps/wallet-mobile/translations/messages/src/auth/CreatePinInput/CreatePinInput.json
@@ -1,32 +1,32 @@
 [
   {
     "id": "components.initialization.custompinscreen.pinInputTitle",
-    "defaultMessage": "!!!Enter the PIN",
+    "defaultMessage": "!!!Enter PIN",
     "file": "src/auth/CreatePinInput/CreatePinInput.tsx",
     "start": {
-      "line": 76,
+      "line": 78,
       "column": 17,
-      "index": 2292
+      "index": 2442
     },
     "end": {
-      "line": 79,
+      "line": 81,
       "column": 3,
-      "index": 2404
+      "index": 2550
     }
   },
   {
     "id": "components.initialization.custompinscreen.pinInputSubtitle",
-    "defaultMessage": "!!!Choose new PIN for quick access to wallet.",
+    "defaultMessage": "!!!Choose a new PIN to quickly access your wallet",
     "file": "src/auth/CreatePinInput/CreatePinInput.tsx",
     "start": {
-      "line": 80,
+      "line": 82,
       "column": 20,
-      "index": 2426
+      "index": 2572
     },
     "end": {
-      "line": 83,
+      "line": 85,
       "column": 3,
-      "index": 2570
+      "index": 2720
     }
   },
   {
@@ -34,14 +34,29 @@
     "defaultMessage": "!!!Repeat PIN",
     "file": "src/auth/CreatePinInput/CreatePinInput.tsx",
     "start": {
-      "line": 84,
+      "line": 86,
       "column": 29,
-      "index": 2601
+      "index": 2751
     },
     "end": {
-      "line": 87,
+      "line": 89,
       "column": 3,
-      "index": 2717
+      "index": 2867
+    }
+  },
+  {
+    "id": "components.firstrun.custompinscreen.pinInputConfirmationSubTitle",
+    "defaultMessage": "!!!Repeat a new PIN to quickly access your wallet",
+    "file": "src/auth/CreatePinInput/CreatePinInput.tsx",
+    "start": {
+      "line": 90,
+      "column": 32,
+      "index": 2901
+    },
+    "end": {
+      "line": 93,
+      "column": 3,
+      "index": 3055
     }
   }
 ]
