--- a/apps/wallet-mobile/src/i18n/locales/cs-CZ.json
+++ b/apps/wallet-mobile/src/i18n/locales/cs-CZ.json
@@ -88,7 +88,7 @@
   "components.firstrun.custompinscreen.pinInputConfirmationSubTitle": "Repeat a new PIN to quickly access your wallet",
   "components.initialization.custompinscreen.pinInputTitle": "Zadejte PIN",
   "components.initialization.custompinscreen.title": "Nastavit PIN",
-  "components.initialization.languagepicker.title": "Select Language",
+  "components.initialization.languagepicker.title": "Select language",
   "components.ledger.ledgerconnect.usbDeviceReady": "USB zařízení je připraveno, klikněte na Potvrdit k pokračování.",
   "components.ledger.ledgertransportswitchmodal.bluetoothButton": "Připojit přes Bluetooth",
   "components.ledger.ledgertransportswitchmodal.bluetoothExplanation": "Vyberte tuto možnost pokud chcete připojit Ledger Nano X pomocí Bluetooth:",
@@ -669,5 +669,7 @@
   "termsOfService.tosAgreement": "Terms Of Service Agreement",
   "toggleAnalyticsSettings.analyticsTitle": "User Insights",
   "termsOfService.privacyPolicyTitle": "Privacy Policy",
-  "analytics.privacyPolicy": "Privacy Policy"
+  "analytics.privacyPolicy": "Privacy Policy",
+  "analytics.privacyNotice": "Privacy Notice",
+  "analytics.tosAnd": "and"
 }
