Fix agreement reset in dev and update agreement date

--- a/apps/wallet-mobile/translations/messages/src/features/Initialization/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Initialization/common/strings.json
@@ -151,7 +151,7 @@
   },
   {
     "id": "components.initialization.languagepicker.title",
-    "defaultMessage": "!!!Select Language",
+    "defaultMessage": "!!!Select language",
     "file": "src/features/Initialization/common/strings.tsx",
     "start": {
       "line": 63,
