--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -132,6 +132,7 @@
   "swap.swapScreen.selectToken": "Select token",
   "swap.swapScreen.marketPrice": "Market price",
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
+  "swap.swapScreen.slippageToleranceError": "Slippage must be a number between 0 and 100 and have up to 1 decimal",
   "swap.swapScreen.slippageToleranceInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount",
   "swap.swapScreen.selectPool": "Select pool",
   "swap.swapScreen.eachVerifiedToken": "Each verified tokens gets",
